--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.47MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.68MB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.64MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-2.28MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇺🇸 美国-1.54MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.57MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-158.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-191.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-6.32MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-6.44MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-158.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
