--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.71MB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-9.67MB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.83MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.40MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.63MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-342.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.24MB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-191.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-6.32MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.44MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.50MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-164.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.86MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
       - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
 rules:
