--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-6.40MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.63MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-342.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.24MB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-191.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.32MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.31MB/s(Youtube:不良林), server: 116.129.254.177, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-4.86MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-440.9KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-194.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-786.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-248.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.50MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.50MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-164.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.86MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.86MB/s(Youtube:不良林) 2, server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-342.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-194.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-786.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林) 2
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-342.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-194.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-786.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林) 2
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-342.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-194.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-786.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林) 2
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-342.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-194.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-786.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林) 2
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-342.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-194.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-786.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林) 2
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-342.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-194.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-786.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林) 2
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-342.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-191.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-194.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-786.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-248.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
       - 🇨🇳 中国-164.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.86MB/s(Youtube:不良林) 2
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
